SLLS-60 Pass 'showVerboseLogs' in initialize params